--- a/public/content/new-post-2024-05-11.md
+++ b/public/content/new-post-2024-05-11.md
@@ -3,6 +3,6 @@ title: New post
 date: 2024-05-11T13:01:00.000Z
 language: en
 summary: Some summary text
-thumbnail: /public/blog_media/ef6a0962.jpg
+thumbnail: /public/blog_media/whatsapp-bild-2024-05-01-kl.-21.39.52_4dcfb05c.jpg
 ---
-Some text
+Some text about the book would be here.
